--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# File with extension .pickle
+*.pickle
+
+# File with extension .png and .jpg
+*.png
+*.jpg
